// Copyright (C) 2018 Storj Labs, Inc.
// See LICENSE for copying information.

syntax = "proto3";
option go_package = "pb";

package inspector;

service Inspector {
  // CountNodes returns the number of nodes in the cache and in the routing table
  rpc CountNodes(CountNodesRequest) returns (CountNodesResponse);

  // GetBuckets returns the k buckets from a Kademlia instance
  rpc GetBuckets(GetBucketsRequest) returns (GetBucketsResponse);
}

message CountNodesResponse {
  int64 kademlia = 1;
  int64 overlay = 2;
}

message CountNodesRequest {
}

message GetBucketsRequest {
}

message GetBucketsResponse {
  repeated Bucket buckets = 1;
}

message Bucket {
  string id = 1;
}
